# design-patterns

abstract_factory/: abstract_factory_design.mdj
abstract_factory/abstract_factory_project/: AdministratorMenu.cpp  AdministratorMenu.h  AdministratorNavbar.cpp  AdministratorNavbar.h  AdministratorPanelFactory.cpp  AdministratorPanelFactory.h  AdministratorSearchBox.cpp  AdministratorSearchBox.h  AdministratorSidebar.cpp  AdministratorSidebar.h  CMakeLists.txt  ClientMenu.cpp  ClientMenu.h  ClientNavbar.cpp  ClientNavbar.h  ClientPanelFactory.cpp  ClientPanelFactory.h  ClientSearchBox.cpp  ClientSearchBox.h  ClientSidebar.cpp  ClientSidebar.h  ManagePanelFactory.cpp  ManagePanelFactory.h  Menu.cpp  Menu.h  Navbar.cpp  Navbar.h  SearchBox.cpp  SearchBox.h  Sidebar.cpp  Sidebar.h  SomeFancyAppWithUI.cpp  SomeFancyAppWithUI.h  main.cpp
adapter/: adapter.mdj
adapter/adapter_project/: CMakeLists.txt  DbAdapter.cpp  DbAdapter.h  OracleAdapter.cpp  OracleAdapter.h  OracleORM.cpp  OracleORM.h  PostgresAdapter.cpp  PostgresAdapter.h  PostgresORM.cpp  PostgresORM.h  RedisAdapter.cpp  RedisAdapter.h  RedisORM.cpp  RedisORM.h  SystemRejestracji.cpp  SystemRejestracji.h  User.cpp  User.h  main.cpp
command/: command.mdj
command/command_project/: CMakeLists.txt  Command.cpp  Command.h  DbConnector.cpp  DbConnector.h  RegisterCommand.cpp  RegisterCommand.h  Registration.cpp  Registration.h  SystemRejestracji.cpp  SystemRejestracji.h  TaskProcessor.cpp  TaskProcessor.h  UnregisterCommand.cpp  UnregisterCommand.h  main.cpp
composite/: composite_design.mdj
composite/composite_project/: Button.cpp  Button.h  CMakeLists.txt  Component.cpp  Component.h  Div.cpp  Div.h  Paragraph.cpp  Paragraph.h  TextBox.cpp  TextBox.h  WebsiteCreator.cpp  WebsiteCreator.h  (+1 more)
decorator/: decorator_design.uml  decorator_design.~ml
decorator/decorator_project/: BrightnessDecorator.cpp  BrightnessDecorator.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraDecorator.cpp  CameraDecorator.h  ContrastDecorator.cpp  ContrastDecorator.h  ICamera.cpp  ICamera.h  Picture.cpp  Picture.h  SaturationDecorator.cpp  SaturationDecorator.h  main.cpp
factory_method/: factory_method_design.uml
factory_method/factory_method_project/: CMakeLists.txt  Chat.cpp  Chat.h  FileMessage.cpp  FileMessage.h  FileMessageFactory.cpp  FileMessageFactory.h  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  PictureMessage.cpp  PictureMessage.h  PictureMessageFactory.cpp  PictureMessageFactory.h  TextMessage.cpp  TextMessage.h  TextMessageFactory.cpp  TextMessageFactory.h  main.cpp
fasade/: fasade-design.mdj
fasade/fasade-project/: CMakeLists.txt  Cooler.cpp  Cooler.h  CoolerFan.cpp  CoolerFan.h  CoolerPump.cpp  CoolerPump.h  Engine.cpp  Engine.h  EngineThermometer.cpp  EngineThermometer.h  FuelInjector.cpp  FuelInjector.h  Gearbox.cpp  Gearbox.h  Speedometer.cpp  Speedometer.h  VCU.cpp  VCU.h  main.cpp
observer/: observer_design.uml  observer_design.~ml
prototype/: prototype_design.mdj
proxy/: proxy_design.uml
singleton/: singleton_design.uml  singleton_design.~ml
(+30 files in other folders)
